--- a/web2.html
+++ b/web2.html
@@ -184,22 +184,27 @@ let UserAmount =
   }
 }
 
-AllUsers();
+//AllUsers();
 
 function SpecificUser(cnum, user){
-  if (currentNum >= 0 && currentNum < DataSet1.length && DataSet1[currentNum].username != user) {
+  if (currentNum >= 0 && currentNum < DataSet1.length) {
+    if(DataSet1[currentNum].username != user){
     console.log(DataSet1[currentNum].username)
     currentNum++;
-    SpecificUser();
+    SpecificUser(cnum, user);
+    
+  }else if (DataSet1[currentNum].username === user){
+    console.log("user found")
   }else if (currentNum === DataSet1.length){
     console.log("No more Users")
-    return 0;
-  }else {
-    console.log("user found")
   }
-
 }
+}
+
+
 SpecificUser(currentNum, "user3");
+console.log(currentNum >= 0 && currentNum < DataSet1.length && DataSet1[currentNum].username != "user3")
+console.log(currentNum)
 
 
     function GameStart(playerUsername){
