eleven added other pages

--- a/loggedinpage.html
+++ b/loggedinpage.html
@@ -29,7 +29,7 @@
       </br>
         <button>How to play</button>
       
-    <button class="logout" onclick="window.location = 'web2.html'">Logout</button>
+    <button class="logout" onclick="window.location.href = 'web2.html'">Logout</button>
       </div>
 
       
