thirteen work on usercreate func not return true

--- a/websignup.html
+++ b/websignup.html
@@ -38,7 +38,7 @@
 
         <br>
         <button  id="signupID" class="signupsubmit" onclick="
-        createAccount(document.getElementById('newusernameentered').value, document.getElementById('passwordentered').value, document.getElementById('passwordretypeentered').value);
+        createUser(document.getElementById('newusernameentered').value, document.getElementById('passwordentered').value, document.getElementById('passwordretypeentered').value);
         
         "
         >Sign-Up</button>
