play button works

--- a/loggedinpage.html
+++ b/loggedinpage.html
@@ -23,7 +23,7 @@
 
       <div class="loggedin">
         
-        <button>Play</button>
+        <button class="playbutton" onclick="startGame();">Play</button>
         <br>
         <br>
       </br>
@@ -48,8 +48,7 @@
       <p class="leaderscore" id="leaderscoreID"></p>
     </div>  
   
-    <script src="FunctionsAndDatabase.js">
-   
-    </script>
+    <script src="FunctionsAndDatabase.js"></script>
+    <script src="GameFunctions.js"></script>
     </body>
 </html>
