fifteenth added working canvas when clicking play

--- a/loggedinpage.html
+++ b/loggedinpage.html
@@ -23,7 +23,8 @@
 
       <div class="loggedin">
         
-        <button class="playbutton" onclick="startGame();">Play</button>
+        <button class="playbutton" onclick="
+        window.location.href = 'game.html';">Play</button>
         <br>
         <br>
       </br>
