--- a/game.html
+++ b/game.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Will to Live</title>
     <link rel="stylesheet" href="gamestyle.css">
   </head>
 
-  <body>
-    <script src="GameFunctions.js">
-   
+  <body onload="console.log('loaded')">
+    
+    <script type="text/javascript" src="GameFunctions.js">
+ 
     </script>
-
 
   </body>
