sixteenth, added working canvas with image and sound

--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
   </head>
 
   <body onload="console.log('loaded')">
-    
+    <img id="thevoice" src="thevoiceface.png">
     <script type="text/javascript" src="GameFunctions.js">
  
     </script>
