--- a/HTML/game.html
+++ b/HTML/game.html
@@ -2,13 +2,14 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
   <title>Will to Live</title>
   <link rel="stylesheet" href="../CSS/gamestyle.css">
 </head>
 
 <body onload="console.log('loaded')">
-  <img id="thevoice" src="../Assets/Images/thevoiceface.png">
+  <script language="JavaScript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="../JavaScript/GameFunctions.js"></script>
-
+  
+  
 </body>
