--- a/HTML/loggedinpage.html
+++ b/HTML/loggedinpage.html
@@ -29,7 +29,7 @@ window.location.href = '../HTML/game.html';">Play</button>
         <br>
         <br>
         </br>
-        <button>How to play</button>
+        <button class="howtoplaybutton" onclick="window.location.href = 'howtoplay.html'">How to play</button>
 
         <button class="logout" onclick="window.location.href = '../index.html'">Logout</button>
       </div>
@@ -48,9 +48,9 @@ window.location.href = '../HTML/game.html';">Play</button>
       <p class="leadername" id="leadernameID"></p>
       <p class="leaderscore" id="leaderscoreID"></p>
     </div>
-    
+
   </div>
-  
+
 
   <script src="../JavaScript/FunctionsAndDatabase.js"></script>
 
