--- a/HTML/howtoplay.html
+++ b/HTML/howtoplay.html
@@ -4,8 +4,8 @@
 
 <head>
 
-  <title>Game Website</title>
-  <link rel="stylesheet" href="../CSS/style.css">
+  <title>Game Website</title><!--Page Title-->
+  <link rel="stylesheet" href="../CSS/style.css"><!--Style Reference-->
 </head>
 
 <body>
@@ -46,8 +46,7 @@
 
       <div class="loggedin">
 
-        <button class="backbutton" onclick="
-window.location.href = 'loggedinpage.html';">Back</button>
+        <button class="backbutton" onclick="window.location.href = 'loggedinpage.html';">Back</button>
         <br>
       </div>
     </div>
