--- a/HTML/game.html
+++ b/HTML/game.html
@@ -8,8 +8,9 @@
 </head>
 
 <body onload="console.log('loaded')">
+  
+  <!--Referencing scripts-->
   <script language="JavaScript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="../JavaScript/GameFunctions.js"></script>
-  
   
 </body>
