--- a/HTML/howtoplay.html
+++ b/HTML/howtoplay.html
@@ -19,15 +19,15 @@
   <div class="container1">
     <div class="box">
       <div class="howtoplaydiv">
-
+        <!--Image references-->
         <img class="bluestar" src="../Assets/Images/bluestar.png">
         <img class="redstar" src="../Assets/Images/redstar.png">
         <img class="goldstar" src="../Assets/Images/goldstar.png">
-        <h2 class="howtoclass" id="howtoID">How to Play</h2>
-        <p class="howtoplaytext">The game character is the mouse cursor!
+        <h2 class="howtoclass" id="howtoID">How to Play</h2><!--Box title-->
 
+        <!--------------GAME TEXT-------------->
+        <p class="howtoplaytext">The game character is the mouse cursor!</p>
 
-        </p>
         <p class="howtoplaytext">try to survive without getting hit once, if you get hit the game will end.</p>
 
         <p class="howtoplaytext">this game is made up of several timed survival minigames, not completing a minigame in
@@ -46,10 +46,12 @@
 
       <div class="loggedin">
 
-        <button class="backbutton" onclick="window.location.href = 'loggedinpage.html';">Back</button>
+        <button class="backbutton" onclick="window.location.href = 'loggedinpage.html';">Back</button><!--Back button, takes back to the logged in page-->
         <br>
       </div>
     </div>
+
+    <!--Leaderboard HTML set-up-->
     <div class="leaderboardbox">
       <h2 class="rankingtext">Live Ranking</h2>
       <p class="leaderboard" id="leaderboardID">
@@ -59,11 +61,9 @@
       <p class="leadername" id="leadernameID"></p>
       <p class="leaderscore" id="leaderscoreID"></p>
     </div>
-
   </div>
 
-  <script src="../JavaScript/FunctionsAndDatabase.js"></script>
+  <script src="../JavaScript/FunctionsAndDatabase.js"></script><!--JS Ref-->
 
 </body>
-
 </html>
