--- a/HTML/loggedinpage.html
+++ b/HTML/loggedinpage.html
@@ -22,11 +22,11 @@
 
       <div class="loggedin">
 
-        <button class="playbutton"> <!--onclick="window.location.href = '../HTML/game.html';"-->Play</button> <!--Play Button-->
-        <br>
+        <button class="playbutton">Play</button> <!--Play Button-->
+        
         <br>
         </br>
-        <button class="howtoplaybutton" onclick="window.location.href = 'howtoplay.html'"></button>>How to play</button>
+        <button class="howtoplaybutton" onclick="window.location.href = 'howtoplay.html'">How to play</button>
 
         <button class="logout" onclick="window.location.href = '../index.html'">Logout</button>
       </div>
