--- a/HTML/loggedinpage.html
+++ b/HTML/loggedinpage.html
@@ -22,7 +22,7 @@
 
       <div class="loggedin">
 
-        <button class="playbutton">Play</button> <!--Play Button-->
+        <button class="playbutton" onclick="window.location.href = 'game.html'">Play</button> <!--Play Button-->
         
         <br>
         </br>
